--- a/documentation_page/doc.css
+++ b/documentation_page/doc.css
@@ -5,7 +5,8 @@ body {
     width: 300px;
     height: 100%;
     display: block;
-    position: fixed;
+    top: 0px;
+    left: 0px;
     margin: 0;
     padding:0;
     overflow: auto;
@@ -35,6 +36,22 @@ body {
     text-decoration: none;
     list-style-type: none;
     font-size: 18px;
+}
+#wrapper a:hover {
+    background-color: #454581;
+    display: inline-block;
+    /* position: relative; */
+    /* transition: 0.5s; */
+}
+
+#navbar {
+    position: fixed;
+    min-width: 290px;
+    width: 300px;
+    top: 0px;
+    left: 0px;
+    background-color: #6363bb;
+    height: 100%;
 }
 
 #main-doc { 
@@ -86,22 +103,44 @@ body {
     font-size: 20px;
 }
 
-@media only screen and (max-width: 700px){
-    #main-doc {
-      width: 49.99999%;
-      margin: 6px 0;
+@media only screen and (min-device-width: 1200px) 
+and (max-device-width: 1600px) {
+    #navbar {
+        position: fixed;
+        min-width: 290px;
+        width: 300px;
+        top: 0px;
+        left: 0px;
+        background-color: #6363bb;
+        height: 100%;
     }
-    #wrapper {
-        width: 49.99999%;
-        margin: 6px 0;
-      }
-  }
-  
-  @media only screen and (max-width: 500px){
+}
+
+
+@media only screen and (max-width: 500px){
     #main-doc {
-      width: 100%;
-    }
-    #wrapper {
         width: 100%;
-      }
-  }
+        padding-top: 15px;
+        margin-top: 360px;
+        margin-left: 5px;
+        width: 90vw;
+    }
+
+    #navbar {
+        width: 95%;
+        height: 350px;
+        position: fixed;
+        top: 0;
+    }
+
+    #wrapper header {
+        font-size: 20px;
+        color: white;
+    }
+
+    .sectionheader {
+        font-size: 24px;
+        font-style: bold;
+        padding-top: 360px;
+    }
+}
